--- a/Index.html
+++ b/Index.html
@@ -8,12 +8,17 @@
 </head>
 <body>
 
+<video autoplay muted loop id="bgVideo">
+    <source src="bg1.mp4" type="video/mp4">
+    Your browser does not support HTML5 video.
+  </video>
 <!-- Hero -->
-<section id="hero">
-  <h1>QuantEdge Technologies</h1>
-  <p class="tagline">AI-Powered Market Analysis for Elite Traders</p>
-  <button id="exploreBtn">Explore Features</button>
-</section>
+   <div id="content">
+    <section id="hero">
+      <h1>QuantEdge Technologies</h1>
+      <p class="tagline">AI-Powered Market Analysis for Elite Traders</p>
+      <button id="exploreBtn">Explore Features</button>
+    </section>
 
 <!-- About -->
 <section id="about">
@@ -86,7 +91,7 @@
     <button type="submit">Send Message</button>
   </form>
 </section>
-
+</div>
 <!-- Footer -->
 <footer>
   <p>&copy; 2025 QuantEdge Technologies. All rights reserved.</p>
