--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>QuantEdge Technologies</title>
-<link rel="stylesheet" href="Css.css">
+<link rel="stylesheet" href="css.css">
 </head>
 <body>
 
@@ -97,6 +97,7 @@
   <p>&copy; 2025 QuantEdge Technologies. All rights reserved.</p>
 </footer>
 
-<script src="Js.js"></script>
+<script src="js.js"></script>
 </body>
 </html>
+
