--- a/index.html
+++ b/index.html
@@ -11,29 +11,43 @@
 <video autoplay muted loop id="bgVideo">
     <source src="bg1.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
-  </video>
+</video>
+
+<div id="content">
+
 <!-- Hero -->
-   <div id="content">
-    <section id="hero">
-      <h1>QuantEdge Technologies</h1>
-      <p class="tagline">AI-Powered Market Analysis for Elite Traders</p>
-      <button id="exploreBtn">Explore Features</button>
-    </section>
+<section id="hero">
+  <h1>QuantEdge Technologies</h1>
+  <p class="tagline">Advanced AI-Driven Market Intelligence</p>
+  <button id="exploreBtn">Discover Our Insights</button>
+</section>
 
 <!-- About -->
 <section id="about">
   <h2>About Us</h2>
-  <p>QuantEdge Technologies combines AI & market intelligence to empower traders. Our mission is to provide actionable insights using data, history, and top investor movements.</p>
+  <p>QuantEdge Technologies delivers actionable market intelligence through cutting-edge AI and data analytics. We combine historical trends, real-time sentiment, and investor activity to empower informed trading decisions.</p>
 </section>
 
 <!-- Features -->
 <section id="features">
   <h2>Our Features</h2>
   <div class="feature-container">
-    <div class="feature-card" onclick="showFeatureInfo('AI analyzes market emotions and investor moods.')">AI</div>
-    <div class="feature-card" onclick="showFeatureInfo('Historical Data Analysis predicts future market trends.')">Historical Data</div>
-    <div class="feature-card" onclick="showFeatureInfo('Machine Learning provides precise trade insights.')">ML Predictions</div>
-    <div class="feature-card" onclick="showFeatureInfo('Investor Tracker monitors top institutional & retail moves.')">Investor Tracker</div>
+    <div class="feature-card">
+      AI Analysis
+      <div class="feature-info">Monitors market sentiment and investor behavior in real time</div>
+    </div>
+    <div class="feature-card">
+      Historical Data
+      <div class="feature-info">Detects patterns and forecasts trends with precision</div>
+    </div>
+    <div class="feature-card">
+      Machine Learning Predictions
+      <div class="feature-info">Delivers accurate trade recommendations</div>
+    </div>
+    <div class="feature-card">
+      Investor Tracker
+      <div class="feature-info">Tracks institutional and retail investor activity for strategic insight</div>
+    </div>
   </div>
 </section>
 
@@ -48,7 +62,7 @@
   <h2>How It Works</h2>
   <div class="process-container">
     <div class="process-step">
-      <h3>1. Review Socials</h3>
+      <h3>1. Monitor Market Sentiment</h3>
       <p>Gather market mood from news, social media, and investor activity.</p>
     </div>
     <div class="process-step">
@@ -60,7 +74,7 @@
       <p>Monitor top institutional and retail investors to anticipate moves.</p>
     </div>
     <div class="process-step">
-      <h3>4. Generate Insights</h3>
+      <h3>4. Deliver Insights</h3>
       <p>Combine AI predictions to provide Buy / Hold / Sell recommendations.</p>
     </div>
   </div>
@@ -91,7 +105,9 @@
     <button type="submit">Send Message</button>
   </form>
 </section>
+
 </div>
+
 <!-- Footer -->
 <footer>
   <p>&copy; 2025 QuantEdge Technologies. All rights reserved.</p>
@@ -100,4 +116,3 @@
 <script src="js.js"></script>
 </body>
 </html>
-
